--- a/produto/templates/produto/index.html
+++ b/produto/templates/produto/index.html
@@ -1,29 +1,37 @@
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+{% extends "produto/layouts/base.html" %}
 
-<div class="container">
-    <h1>Lista de Produtos</h1>
-    <table class="table table-striped">
-        <thead>
-            <tr>
-                <th scope="col">Id:</th>
-                <th scope="col">Nome:</th>
-                <th scope="col">Data Cadastro:</th>
-                <th scope="col">Opções</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for produto in produtos %}
-            <tr>
-                <th scope="row">{{ produto.pk }}</th>
-                <th scope="row">{{ produto.nome }}</th>
-                <th scope="row">{{ produto.data_cadastro | date:'d/m/y' }}</th>
-                <th scope="row">
-                    <a class="btn btn-warning btn-sm" href="">!</a>
-                    <a class="btn btn-danger btn-sm" href="">x</a>
-                </th>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-</div>
+{% block title %}Lista de Produtos{% endblock %}
+
+{% block page %}Lista de Produtos {% endblock %}
+
+{% block content %}
+<table class="table table-striped">
+    <thead>
+        <tr>
+            <th scope="col">Id:</th>
+            <th scope="col">Nome:</th>
+            <th scope="col">Código_1:</th>
+            <th scope="col">Código_2:</th>
+            <th scope="col">Código_3:</th>
+            <th scope="col">Data Cadastro:</th>
+            <th scope="col">Opções</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for produto in produtos %}
+        <tr>
+            <th scope="row">{{ produto.pk }}</th>
+            <th scope="row">{{ produto.nome }}</th>
+            <th scope="row">{{ codigo }}</th>
+            <th scope="row">{{ codigo }}</th>
+            <th scope="row">{{ codigo }}</th>
+            <th scope="row">{{ produto.data_cadastro | date:'d/m/y' }}</th>
+            <th scope="row">
+                <a class="btn btn-warning btn-sm" href="">!</a>
+                <a class="btn btn-danger btn-sm" href="">x</a>
+            </th>
+        </tr>
+        {% endfor %}
+    </tbody>
+</table>
+{% endblock %}
