--- a/produto/templates/produto/detalhe.html
+++ b/produto/templates/produto/detalhe.html
@@ -9,8 +9,8 @@
 <div class="card" style="width: 18rem;">
     <h4 class="card-title text-center pt-2 mb-0">{{ produto.nome }}</h4>
     <hr>
+    <div class="card-body col">
     <img src="{{  produto.image.url }}" class="card-img-top" alt="...">
-    <div class="card-body">
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
             content.</p>
     </div>
