--- a/produto/templates/produto/layouts/base.html
+++ b/produto/templates/produto/layouts/base.html
@@ -23,7 +23,7 @@
 
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar</a>
+            <a class="navbar-brand" href="#">Fundimar</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -65,7 +65,7 @@
 
     <div class="container mt-5 pt-4">
         <div class="alert alert-secondary p-1 ps-3" role="alert">
-            <h3>{% block page %}{% endblock %}</h3>
+            <h2>{% block page %}{% endblock %}</h2>
         </div>
         {% block content %}{% endblock %}
     </div>
