--- a/produto/templates/produto/index.html
+++ b/produto/templates/produto/index.html
@@ -1,9 +1,8 @@
 {% extends "produto/layouts/base.html" %}
 
-
 {% block title %}Lista de Produtos{% endblock %}
 
-{% block page %}Lista de Produtos <a href="" class="btn btn-success float-end">Novo Produto</a>{% endblock %}
+{% block page %}Lista de Produtos <a href="" class="btn btn-success mt-1 float-end">Novo Produto</a>{% endblock %}
 
 {% block content %}
 <div class="table-resposive">
@@ -36,7 +35,7 @@
                     <button type="button" class="btn btn-info btn-sm me-1 mt-1" data-bs-toggle="modal"
                         data-bs-target="#produto{{ produto.id }}"><i class="fas fa-info-circle"></i>
                     </button>
-                    <a class="btn btn-warning btn-sm me-1 mt-1" href=""><i class="fas fa-pen"></i></a>
+                    <a class="btn btn-warning btn-sm me-1 mt-1" href="{% url 'produto:editar' produto.id %}"><i class="fas fa-pen"></i></a>
                     <a class="btn btn-danger btn-sm mt-1" href=""><i class="fas fa-trash-alt"></i></a>
                 </th>
             </tr>
