--- a/produto/templates/produto/layouts/base.html
+++ b/produto/templates/produto/layouts/base.html
@@ -63,8 +63,8 @@
         </div>
     </nav>
 
-    <div class="container mt-5 pt-4">
-        <div class="alert alert-secondary p-1 ps-3" role="alert">
+    <div class="container mt-5 pt-5">
+        <div class="alert alert-secondary p-1 pe-2 ps-2" role="alert">
             <h2>{% block page %}{% endblock %}</h2>
         </div>
         {% block content %}{% endblock %}
